--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                         <img src="images/chemise-complet-1.jpg" alt="chemise et complet">
                     </div>
                     <div class="content">
-                        <h5>Chemise</h5>
+                        <h5>Chemise kit complet</h5>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est, totam.</p>
                         <button type="submit" class="buy">Shop now</button>
                     </div>
@@ -140,7 +140,7 @@
                         <img src="images/chemise-complet-2.jpg" alt="Chemise et complet">
                     </div>
                     <div class="content">
-                        <h5>Chemise</h5>
+                        <h5>Chemise kit complet</h5>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est, totam.</p>
                         <button type="submit" class="buy">Shop now</button>
                     </div>
@@ -152,7 +152,7 @@
                         <img src="images/chemise-complet.jpg" alt="chemise et complet">
                     </div>
                     <div class="content">
-                        <h5>Chemise</h5>
+                        <h5>Chemise kit complet</h5>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est, totam.</p>
                         <button type="submit" class="buy">Shop now</button>
                     </div>
@@ -167,7 +167,7 @@
                             <img src="images/t-short-white.jpg" alt="t-short">
                         </div>
                         <div class="content">
-                            <h5>Chemise</h5>
+                            <h5>T-shirt</h5>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est, totam.</p>
                             <button type="submit" class="buy">Shop now</button>
                         </div>
@@ -179,7 +179,7 @@
                             <img src="images/pull-over-1.jpg" alt="pull-over">
                         </div>
                         <div class="content">
-                            <h5>Chemise</h5>
+                            <h5>Pull-over</h5>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est, totam.</p>
                             <button type="submit" class="buy">Shop now</button>
                         </div>
@@ -191,7 +191,7 @@
                             <img src="images/pair.jpg" alt="paire de basket">
                         </div>
                         <div class="content">
-                            <h5>Chemise</h5>
+                            <h5>Basket</h5>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est, totam.</p>
                             <button type="submit" class="buy">Shop now</button>
                         </div>
