--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                             <li class="nav-item"><a class="nav-link" href="#Apropos">A Propos</a></li>
                             
                         </ul>
-                        <button type="submit" class="buy">Buy now</button>
+                        <a href="#Contact"><button type="submit" class="buy">Buy now</button></a>
                 </div>
 
             </div>
@@ -55,7 +55,7 @@
             <div class="text">
                 <div class="title">SPECIAL SALE<br> ONLY DAY</div>
                 <div class="paragraphe">Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque amet maiores reprehenderit corporis ipsam? Ratione veritatis saepe dolore ab quos odit minus, magni repudiandae consequuntur voluptas deserunt nulla deleniti itaque.</div>
-                <button class="buy">Shop now</button>
+                <a href="#Produit"><button class="buy">Shop now</button></a>
              </div>
                 <div class="caroussel">
                         <img src="images/shopping-responsable-faires-les-soldes-autrement-cartouche-vide-fr.jpg" alt="">
@@ -91,7 +91,7 @@
                 <div class="content">
                     <h5>Chemise</h5>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est, totam.</p>
-                    <button type="submit" class="buy">Shop now</button>
+                    <a href="https://wa.me/2250586247542?text=Bonjour/Bonsoir%20j'aimerais%20avoir%20plus%20d'information%20sur%20vos%20Chemises"><button type="submit" class="buy">Shop now</button></a>
                 </div>
                 <div class="price">Prix: 50$</div>
             </div>
@@ -103,7 +103,7 @@
                 <div class="content">
                     <h5>Chemise</h5>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est, totam.</p>
-                    <button type="submit" class="buy">Shop now</button>
+                    <a href="https://wa.me/2250586247542?text=Bonjour/Bonsoir%20j'aimerais%20avoir%20plus%20d'information%20sur%20vos%20Chemises"><button type="submit" class="buy">Shop now</button></a>
                 </div>
                 <div class="price">Prix: 50$</div>
             </div>
@@ -115,7 +115,7 @@
                 <div class="content">
                     <h5>Chemise</h5>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est, totam.</p>
-                    <button type="submit" class="buy">Shop now</button>
+                    <a href="https://wa.me/2250586247542?text=Bonjour/Bonsoir%20j'aimerais%20avoir%20plus%20d'information%20sur%20vos%20Chemises"><button type="submit" class="buy">Shop now</button></a>
                 </div>
                 <div class="price">Prix: 50$</div>
             </div>
@@ -130,7 +130,7 @@
                     <div class="content">
                         <h5>Chemise kit complet</h5>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est, totam.</p>
-                        <button type="submit" class="buy">Shop now</button>
+                        <a href="https://wa.me/2250586247542?text=Bonjour/Bonsoir%20j'aimerais%20avoir%20plus%20d'information%20sur%20vos%20Chemises%20Kit%20Complet"><button type="submit" class="buy">Shop now</button></a>
                     </div>
                     <div class="price">Prix: 50$</div>
                 </div>
@@ -142,7 +142,7 @@
                     <div class="content">
                         <h5>Chemise kit complet</h5>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est, totam.</p>
-                        <button type="submit" class="buy">Shop now</button>
+                        <a href="https://wa.me/2250586247542?text=Bonjour/Bonsoir%20j'aimerais%20avoir%20plus%20d'information%20sur%20vos%20Chemises%20Kit%20Complet"><button type="submit" class="buy">Shop now</button></a>
                     </div>
                     <div class="price">Prix: 50$</div>
                 </div>
@@ -154,7 +154,7 @@
                     <div class="content">
                         <h5>Chemise kit complet</h5>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est, totam.</p>
-                        <button type="submit" class="buy">Shop now</button>
+                        <a href="https://wa.me/2250586247542?text=Bonjour/Bonsoir%20j'aimerais%20avoir%20plus%20d'information%20sur%20vos%20Chemises%20Kit%20Complet"><button type="submit" class="buy">Shop now</button></a>
                     </div>
                     <div class="price">Prix: 50$</div>
                 </div>
@@ -169,7 +169,7 @@
                         <div class="content">
                             <h5>T-shirt</h5>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est, totam.</p>
-                            <button type="submit" class="buy">Shop now</button>
+                            <a href="https://wa.me/2250586247542?text=Bonjour/Bonsoir%20j'aimerais%20avoir%20plus%20d'information%20sur%20vos%20T-shirt"><button type="submit" class="buy">Shop now</button></a>
                         </div>
                         <div class="price">Prix: 50$</div>
                     </div>
@@ -181,7 +181,7 @@
                         <div class="content">
                             <h5>Pull-over</h5>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est, totam.</p>
-                            <button type="submit" class="buy">Shop now</button>
+                            <a href="https://wa.me/2250586247542?text=Bonjour/Bonsoir%20j'aimerais%20avoir%20plus%20d'information%20sur%20vos%20Pull-Over"><button type="submit" class="buy">Shop now</button></a>
                         </div>
                         <div class="price">Prix: 50$</div>
                     </div>
@@ -193,7 +193,7 @@
                         <div class="content">
                             <h5>Basket</h5>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est, totam.</p>
-                            <button type="submit" class="buy">Shop now</button>
+                            <a href="https://wa.me/2250586247542?text=Bonjour/Bonsoir%20j'aimerais%20avoir%20plus%20d'information%20sur%20vos%20Paires%20de%20Basket"><button type="submit" class="buy">Shop now</button></a>
                         </div>
                         <div class="price">Prix: 50$</div>
                     </div>
@@ -261,8 +261,8 @@
                 <div class="contact-whatsapp">
                     <i class="fab fa-whatsapp"></i>
                         <p>Whatsapp</p>
-                        <P><a href="https://wa.me/2250586247542?text=Shop%20now">/wa.me.../send message</a></P>
-                        <a href="https://wa.me/2250586247542?text=Shop%20now"><button type="submit" class="btn">Shop now</button></a>
+                        <P><a href="https://wa.me/2250586247542?text=Bonjour/Bonsoir%20j'aimerais%20avoir%20plus%20d'information%20sur%20vos%20articles">/wa.me.../send message</a></P>
+                        <a href="https://wa.me/2250586247542?text=Bonjour/Bonsoir%20j'aimerais%20avoir%20plus%20d'information%20sur%20vos%20articles"><button type="submit" class="btn">Shop now</button></a>
                     </i>
                 </div>
                 <div class="contact-phone">
